# GW-BASIC

./: .gitignore  AGENTS.md  COPYING  IMPLEMENTATION_STATUS.md  Makefile.am  README.md  autogen.sh  color_demo.bas  configure.ac  debug_gc.cpp  debug_temppool.cpp  simple_screen_test.bas  test_key_trap.bas  test_load.cpp  test_screen.bas  test_screen_error.bas  test_screen_modes.bas  window_test.bas
docs/: ARRAY_IMPLEMENTATION.md  appendix_mbf_and_rounding.md  appendix_tokens.md  architecture_map.md  reimplementation_guide.md
examples/: README.md  comprehensive_read_test.bas  debug_test.bas  draw_demo.bas  event_trap_demo.bas  final_test.bas  on_goto_examples.bas  output.bas  read_only_test.bas  restore_test.bas  restore_test2.bas  sample.bas  screen_demo.bas  simple_test.bas  test.bas  test_chr_str.bas  test_clean.bas  test_color.bas  test_def_call.bas  test_def_empty_params.bas  test_def_fn.bas  test_def_no_spaces.bas  test_def_param.bas  test_def_simple.bas  test_def_tokens.bas  test_files.bas  test_fkeys.bas  test_for.bas  test_for_loop.bas  test_get_put.bas  test_graphics_get_put.bas  test_kill.bas  test_name.bas  test_open_len.bas  test_open_simple.bas  test_paint.bas  test_random_file.bas  test_random_no_len.bas  test_read_data.bas  test_read_debug.bas  (+4 more)
src/: .gitignore  BitmapFont.hpp  Makefile.am  ProgramStore.hpp  main.cpp
src/ExpressionEvaluator/: .gitignore  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  Makefile.am  test_expression.cpp
src/Graphics/: GraphicsContext.cpp  GraphicsContext.hpp  Makefile.am
src/InterpreterLoop/: .gitignore  BasicDispatcher.hpp  InterpreterLoop.cpp  InterpreterLoop.hpp  Makefile.am  interpreter_example.cpp  test_basicdispatcher.cpp  test_interpreterloop.cpp
src/NumericEngine/: .gitignore  MBFFormat.cpp  MBFFormat.hpp  Makefile.am  NumericEngine.cpp  NumericEngine.hpp  debug_mbf.cpp  test_edge.cpp  test_mbf.cpp  test_norm.cpp  test_numeric.cpp
src/ProgramStore/: .gitignore  Makefile.am  ProgramStore.cpp  README.md  programstore_example.cpp  test_programstore.cpp
src/Runtime/: ArrayManager.cpp  ArrayManager.hpp  ArrayTypes.hpp  DataManager.cpp  DataManager.hpp  EventTraps.cpp  EventTraps.hpp  FileManager.cpp  FileManager.hpp  GWError.hpp  Makefile.am  RuntimeStack.hpp  StringFunctions.cpp  StringFunctions.hpp  StringHeap.hpp  StringManager.hpp  StringTypes.hpp  UserFunctionManager.cpp  UserFunctionManager.hpp  Value.hpp  VariableTable.hpp
src/Tokenizer/: .gitignore  Makefile.am  TOKENIZER_README.md  TOKENIZER_SUMMARY.md  Tokenizer.cpp  Tokenizer.hpp  test_tokenizer  test_tokenizer.cpp  tokenizer_example.cpp
tests/: .gitignore  Makefile.am  README.md  debug_temp.cpp  test_array_manager.cpp  test_draw.cpp  test_draw_integration.cpp  test_error_handling.cpp  test_event_traps.cpp  test_graphics_get_put.cpp  test_runtime_stack.cpp  test_simple_error.cpp  test_string_functions.cpp  test_string_heap  test_string_heap.cpp  test_string_manager  test_string_manager.cpp  test_variable_table.cpp  test_width.cpp
tests/integration/: .gitignore  Makefile.am  README.md  test_gosub_return.cpp  test_load  test_load.cpp  test_mem_and_deftype.cpp
